# opengl

./: CMakeLists.txt  lines.c  main.cpp  square.c  triangle.c
